# linkml-microschemas-envar

./: .copier-answers.yml  .gitignore  404.html  CLAUDE.md  CONTRIBUTING.md  LICENSE  PLAN.md  README.md  SPEC.md  config.public.mk  index.html  justfile  linter-config.yaml  mkdocs.yml  project.justfile  pyproject.toml  sitemap.xml
.github/workflows/: deploy-docs.yaml  main.yaml
about/: index.html
architecture/: index.html
datasets/: index.html
docs/: about.md  architecture.md  index.md  related-approaches.md  reverse-gap-survey.md  schema_overview.md
docs/css/: atlas.css
docs/dashboard/: index.html
docs/datasets/: index.html
docs/overview/: index.html
docs/schema/: linkml_microschemas_envar.yaml
docs/slides/: architecture-speaker-notes.md  architecture.html  envar-microschema.html
docs/standards-index/: index.md  standards.yaml  standards_index.schema.yaml
docs/templates-linkml/: class.md.jinja2  index.md.jinja2  slot.md.jinja2
elements/: index.html
elements/AddressPeriodAlignmentEnum/: index.html
elements/AnyValue/: index.html
elements/BiasCorrectionAppliedEnum/: index.html
elements/Boolean/: index.html
elements/BufferAggregationEnum/: index.html
elements/CalendarEnum/: index.html
elements/ClinicalDateAssignmentEnum/: index.html
elements/CodedValue/: index.html
elements/ComparatorEnum/: index.html
elements/ConceptStatusEnum/: index.html
elements/Curie/: index.html
elements/DailyMaxTemperatureRecord/: index.html
elements/DailyMinTemperatureRecord/: index.html
elements/DataLayout/: index.html
elements/DataTypeEnum/: index.html
elements/Date/: index.html
elements/DateOrDatetime/: index.html
elements/Datetime/: index.html
elements/DayBoundaryConventionEnum/: index.html
elements/Decimal/: index.html
elements/DepositMetadata/: index.html
examples/: README.md  daymet_tmax_phoenix_2022_07_19.yaml
overview/: index.html
related-approaches/: index.html
reverse-gap-survey/: index.html
schema/: linkml_microschemas_envar.yaml
scripts/: gen_datasets_ledger.py  gen_schema_overview.py  gen_standards_index.py  render_schema_overview_html.py
search/: search_index.json
slides/: envar-microschema.html  related-approaches.html
specs/: 2026-07-03-standard-coverage-design.md  2026-07-04-standards-index-survey-design.md  2026-07-04-standards-reconciliation-design.md  SPEC_DASHBOARD.md
standards-index/: index.html
tests/: __init__.py  test_checker.py  test_coverage.py  test_schema.py  test_standards_index.py
(+633 files in other folders)
